# tiny-pick-vision

./: .gitignore  AGENTS.md  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  stub.c  tpv_jni.c
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  (+1 more)
android/gradle/wrapper/: gradle-wrapper.properties
docs/: DEVELOPER.md
docs/acceptance/: 2026-04-24-v2-device-acceptance.md
docs/plans/: 2026-04-22-tiny-pick-vision-plan.md  2026-04-23-android-bench-test-app-plan.md  2026-04-24-bench-app-v2-mask-overlay-plan.md  2026-04-27-c-first-vision-sdk-implementation-plan.md  2026-04-27-face-detection-m3-implementation-note.md  2026-04-27-face-object-tracking-expansion-plan.md
docs/specs/: 2026-04-22-tiny-pick-vision-design.md  2026-04-23-android-bench-test-app-design.md  2026-04-24-bench-app-v2-mask-overlay-design.md  2026-04-27-c-first-vision-sdk-architecture.md  2026-04-27-face-object-tracking-expansion-design.md
docs/superpowers/plans/: 2026-07-14-github-open-source-release.md
docs/superpowers/specs/: 2026-07-14-github-open-source-release-design.md
include/: tpv.h  tpv_config.h  tpv_internal.h  tpv_vision.h
src/: ccl_moments.c  classifier.c  fixed_math.c  pipeline.c  platform_glue.c  pose.c  shape_features.c  threshold.c  vision_api.c  vision_policy.c  vision_policy.h  vision_tracker.c  vision_tracker.h
tests/: check_layout.c  stub_model_data.c  test_ccl_moments.c  test_classifier.c  test_debug_api.c  test_debug_api_v2.c  test_fixed_math.c  test_pipeline.c  test_platform_glue.c  test_pose.c  test_property.c  test_shape_features.c  test_threshold.c  test_vision_api.c  test_vision_policy.c  test_vision_tracker.c  testlib.c  testlib.h
tools/: analyze_timing.py  replay.c  visualize_mask.py
tools/calibrate/: Makefile  cal_stub.c  calibrate.c  codegen.c  frame_io.c  separability.c  stats.c
tools/calibrate/tests/: test_quantize.c  test_stats.c  testlib_cal.c
(+39 files in other folders)
